# vcmp_launcher_v2

./: .gitignore  Cargo.toml  cli.py  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
crates/launcher_core/: Cargo.toml
crates/launcher_core/src/: config.rs  constant.rs  database.rs  internet.rs  launch.rs  lib.rs  link.rs  logger.rs  main.rs  models.rs  resource.rs  server.rs  utils.rs
crates/library_redirect/: Cargo.toml
crates/library_redirector/: Cargo.toml
crates/library_redirector/src/: lib.rs
crates/src-tauri/: Cargo.toml  tauri.conf.json
crates/src-tauri/src/: bridge.rs  lib.rs  main.rs  state.rs  utils.rs
crates/vcmp_core/: Cargo.toml  build.rs
crates/vcmp_core/src/: launch.rs  lib.rs  main.rs
crates/vcmp_core/src/launch/: windows.rs
src/: App.vue  bridge.ts  constants.ts  i18n.ts  main.ts  types.ts  utils.ts
src/assets/componesables/: screen.ts
src/components/: InputEdit.vue  Progressbar.vue  ScreenToSmall.vue  ServerList.vue  Settings.vue  Switchbar.vue
src/locales/: common.json  en.json  zh_cn.json
src/views/: About.vue  Debug.vue  Home.vue  Internet.vue  Settings.vue
