[package]
name = "launcher_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
encoding_rs = "0.8.35"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = "0.8.6"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
url = { version = "2.5.8", features = ["serde"] }
