[package]
name = "launcher_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde", "std"] }
encoding_rs = "0.8.35"
futures-util = "0.3.31"
reqwest = { version = "0.13.1", features = ["blocking", "form", "json", "multipart", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sevenz-rust2 = "0.20.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
url = { version = "2.5.8", features = ["serde"] }
