[package]
name = "vcmp_core"
version = "0.1.0"
edition = "2024"


[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
windows = { version = "0.62.1", features = [    
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug"
] }
